# BitNet-rs

./: .coderabbit.yaml  .crates.toml  .crates2.json  .dockerignore  .editorconfig  .env.example  .flow_state  .gitignore  .lychee.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .tokeignore  AC10_ERROR_HANDLERS_COMPLETE.rs  AC3_AC4_INDEX.md  AC3_IMPLEMENTATION_ANALYSIS.md  AC3_SAMPLER_TIMEOUT_ANALYSIS.md  AC8_MOCK_REPLACEMENT_VALIDATION_IMPLEMENTATION.md  ACCEPTANCE_SUMMARY.md  ACCURACY_VALIDATION.md  AGENT_ORCHESTRATION_FINAL_REPORT.md  AGENT_ORCHESTRATION_SUMMARY.md  ALPHA_READINESS_UPDATE.md  ANALYSIS_REPORT.md  API.md  API_CHANGES.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REVIEW_PR448.md  AUTOTESTS_EXECUTIVE_SUMMARY.md  BACKEND_ROUTING_QUICK_REFERENCE.md  BITNET_CPP_EXPLORATION_SUMMARY.txt  BULLETPROOF_FIXES_APPLIED.md  BULLETPROOF_PARITY_IMPLEMENTATION.md  CARGO_COMMANDS.md  CARGO_FEATURE_FLAG_AUDIT.md  CHANGELOG.md  CI.md  CI_CLEANUP_SUMMARY.md  CI_EXPLORATION_SUMMARY.md  CI_INTEGRATION_ACTION_PLAN.md  (+502 more)
crates/bitnet-bdd-grid/: Cargo.toml
crates/bitnet-bdd-grid-core/: Cargo.toml
crates/bitnet-cli/: Cargo.toml
crates/bitnet-common/: Cargo.toml  WARN_ONCE_README.md
crates/bitnet-compat/: Cargo.toml
crates/bitnet-device-probe/: Cargo.toml
crates/bitnet-engine-core/: Cargo.toml
crates/bitnet-feature-contract/: Cargo.toml
crates/bitnet-feature-matrix/: Cargo.toml
crates/bitnet-ffi/: Cargo.toml  build.rs  build_c_test.bat  build_c_test.sh  cbindgen.toml
crates/bitnet-generation/: Cargo.toml
crates/bitnet-ggml-ffi/: Cargo.toml  README.md  build.rs
crates/bitnet-gguf/: Cargo.toml
crates/bitnet-gpu-hal/: Cargo.toml
crates/bitnet-honest-compute/: Cargo.toml  README.md
crates/bitnet-inference/: Cargo.toml  TEST_SUMMARY.md  build.rs
crates/bitnet-kernels/: Cargo.toml  UNIT_TEST_SUMMARY.md  build.rs
crates/bitnet-level-zero/: Cargo.toml
crates/bitnet-logits/: Cargo.toml
crates/bitnet-math/: Cargo.toml
crates/bitnet-metal/: Cargo.toml
crates/bitnet-models/: Cargo.toml
crates/bitnet-opencl/: Cargo.toml
crates/bitnet-prompt-templates/: Cargo.toml  README.md
crossval/: Cargo.toml  PR_468_SUMMARY.md  README.md  README_PER_POSITION_LOGITS.md  baselines.json  baselines.json.backup.20250925_172731  baselines.json.backup.20250927_140048  build.rs  prompts.yaml
crossval/benches/: gpu_offloading_bench.rs  performance.rs
crossval/data/: ppl_smoke.txt
crossval/docs/: PARITY_IMPLEMENTATION.md
crossval/examples/: backend_error_demo.rs  test_llama_ffi.rs
crossval/fixtures/: README.md  minimal_test.json  performance_test.json  standard_prompts.json  test_model_small_metadata.json
crossval/props/: __init__.py  metrics.py  run_model.py  strategies.py  test_greedy_invariants.py  test_greedy_parity.py  test_logit_parity.py  test_nll_parity.py  util.py
crossval/src/: BITNET_CPP_WRAPPER_IMPLEMENTATION.md  backend.rs  bitnet_cpp_wrapper.c  bitnet_cpp_wrapper.cc  comparison.rs  cpp_bindings.rs  expanded.rs  fixtures.rs  lib.rs  logits_compare.rs  metrics.rs  receipt.rs  score.rs  token_parity.rs  utils.rs  validation.rs
crossval/tests/: ERROR_HANDLING_TEST_COVERAGE.md  build_detection_tests.rs  cpp_probe.rs  cpp_wrapper_null_vocab_tests.rs  cpp_wrapper_smoke_test.rs  dual_backend_integration.rs  error_handling_tests.rs  error_path_comprehensive_tests.rs  ffi_error_tests.rs  ffi_fallback_tests.rs  ffi_integration.rs  ffi_integration_tests.rs  ffi_socket_tests.rs  framework_validation.rs  gpu_layer_config_tests.rs  iq2s_validation.rs  issue_260_performance_crossval_tests.rs  kv_position_tracking_tests.rs  ms_bitnet_mapping.rs  parity.rs  parity_bitnetcpp.rs  parity_receipts.rs  per_position_logits.rs  performance_validation.rs  qk256_crossval.rs  smoke.rs  token_equivalence.rs  tokenizer_authority_tests.rs
fuzz/: Cargo.toml  crash-331132afb5f1ad5441f4e0c3483c31949a71a1b9
fuzz/fuzz_targets/: architecture_detection.rs  attention_dimensions.rs  attention_mask_gen.rs  batch_norm_params.rs  broadcast_shape_fuzz.rs  cli_config_parse.rs  config_validation.rs  conv1d_params.rs  conv1d_quantized.rs  conv1d_shapes.rs  device_opencl_construct.rs  embedding_lookup.rs  engine_core_no_panic.rs  feature_activation_no_panic.rs  fuzz_attention_scores.rs  fuzz_gguf_header_parse.rs  fuzz_kv_cache_ops.rs  fuzz_layer_norm.rs  fuzz_matmul_shapes.rs  fuzz_quantize_dequant_roundtrip.rs  fuzz_reduction_ops.rs  fuzz_tokenizer_decode_arbitrary.rs  generation_stop_check.rs  generation_stop_checker.rs  gguf_header.rs  gguf_header_parse.rs  gguf_header_roundtrip.rs  gguf_kv_read.rs  gguf_metadata_validate.rs  gguf_metadata_values.rs  gguf_parser.rs  gguf_tensor_info.rs  gguf_writer_roundtrip.rs  gpu_attention_shapes.rs  gpu_hal_types.rs  (+60 more)
tests/: CACHING_AND_OPTIMIZATION.md  CI_REPORTING_GUIDE.md  COMPONENT_INTERACTION_TESTS_IMPLEMENTATION.md  CONFIG.md  CONFIGURATION_SCENARIOS_IMPLEMENTATION.md  Cargo.toml  FAST_EXECUTION_IMPLEMENTATION.md  INTEGRATION_TESTS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_BENCHMARK_IMPLEMENTATION.md  REPORTING_SYSTEM_COMPLETE.md  REPORTING_SYSTEM_IMPLEMENTATION.md  TASK_16_COMPLETION_SUMMARY.md  TESTING_FRAMEWORK_COMPLETE.md  ac1_minimal_test.rs  ac9_comprehensive_integration_testing.rs  api_snapshots.rs  backward_compat_tests.rs  cache-config.toml  ci_gates_validation_test.rs  ci_reporting_standalone_test.rs  comparison_analysis_demo.rs  comparison_test_cases_demo.rs  comparison_test_cases_integration.rs  compatibility.rs  component_interaction_integration_tests.rs  config.example.toml  demo_1e6_tolerance.rs  demo_error_handling.rs  demo_reporting_comprehensive.rs  demo_reporting_system.rs  e2e_comprehensive_tests.rs  e2e_workflow_integration_tests.rs  enhanced_error_demo_simple.rs  env_guard_compliance.rs  example_test.rs  fast-execution.toml  fast-feedback.toml  fast-test-config.toml  fast_feedback_integration_test.rs  fixtures_module_verification_test.rs  (+102 more)
tests-new/: Cargo.toml  gpu_integration_tests.rs  gpu_stress_tests.rs  intel_gpu_feature_tests.rs  lib.rs  opencl_e2e_tests.rs
xtask/: Cargo.toml  README.md  build.rs
(+5836 files in other folders)
