[workspace]
members = [
  ".",                          # Main library crate
  "crates/bitnet-common",
  "crates/bitnet-compat",
  "crates/bitnet-ggml-ffi",     # GGML FFI for IQ2_S support
  "crates/bitnet-models",
  "crates/bitnet-quantization",
  "crates/bitnet-kernels",
  "crates/bitnet-inference",
  "crates/bitnet-tokenizers",
  "crates/bitnet-server",
  "crates/bitnet-cli",
  "crates/bitnet-st2gguf",      # SafeTensors to GGUF converter
  "crates/bitnet-st-tools",     # SafeTensors inspection & merge utilities
  "crates/bitnet-ffi",
  "crates/bitnet-py",
  "crates/bitnet-wasm",
  "crates/bitnet-sys",
  "crossval",
  "tests",
  "xtask",
  "fuzz",
]
resolver = "2"
# Build & test these by default. Others (root `bitnet`, `tests`, `xtask`,
# wasm/py/ffi, etc.) remain workspace members but are opt-in.
default-members = ["crates/bitnet-common", "crates/bitnet-models", "crates/bitnet-tokenizers", "crates/bitnet-quantization", "crates/bitnet-kernels", "crates/bitnet-inference", "crates/bitnet-cli", "crates/bitnet-server", "crates/bitnet-st2gguf"]

[package]
authors = ["BitNet Contributors <bitnet@microsoft.com>"]
categories = ["science", "algorithms", "mathematics", "wasm", "api-bindings"]
description = "High-performance Rust implementation of BitNet 1-bit LLM inference with cross-platform support"
documentation = "https://docs.rs/bitnet"
edition = "2024"
homepage = "https://github.com/microsoft/BitNet"
keywords = ["machine-learning", "llm", "quantization", "inference", "bitnet"]
license = "MIT OR Apache-2.0"
name = "bitnet"
readme = "README.md"
repository = "https://github.com/microsoft/BitNet"
rust-version.workspace = true
version = "0.1.0"
# Disable automatic discovery of tests, benches, and examples
# Many of these use outdated APIs and need updating
# Note: The tests/ directory is a separate bitnet-tests workspace crate
autoexamples = false
autotests = false
autobenches = false

[lib]
# Library source


[workspace.package]
authors = ["BitNet Contributors <bitnet@microsoft.com>"]
categories = ["science", "algorithms", "mathematics", "wasm", "api-bindings"]
description = "High-performance Rust implementation of BitNet 1-bit LLM inference with cross-platform support"
documentation = "https://docs.rs/bitnet"
edition = "2024"
homepage = "https://github.com/microsoft/BitNet"
keywords = ["machine-learning", "llm", "quantization", "inference", "bitnet"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/microsoft/BitNet"
rust-version = "1.90.0"
version = "0.1.0"

[dependencies]
# Core crates - always included
bitnet-common = { path = "crates/bitnet-common", version = "0.1.0" }
bitnet-models = { path = "crates/bitnet-models", version = "0.1.0" }
bitnet-quantization = { path = "crates/bitnet-quantization", version = "0.1.0", default-features = false }
bitnet_ggml_ffi = { package = "bitnet-ggml-ffi", path = "crates/bitnet-ggml-ffi", version = "0.1.0", optional = true }

# Optional crates based on features
bitnet-inference = { path = "crates/bitnet-inference", version = "0.1.0", optional = true }
bitnet-kernels = { path = "crates/bitnet-kernels", version = "0.1.0", optional = true }
bitnet-tokenizers = { path = "crates/bitnet-tokenizers", version = "0.1.0", optional = true }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "rustc", "cargo"] }

# Features section moved to line 126

[dev-dependencies]
async-trait = "0.1.89"
bitnet-tests = { path = "tests", package = "bitnet-tests", default-features = false }
candle-core = { version = "0.9.1", default-features = false }
criterion = "0.7.0"
ctor = "0.6.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
toml = "0.9.8"
# API snapshot testing
insta = { version = "1.43.2", features = ["yaml", "json"] }
num_cpus = "1.17.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
# For test error handling construction
reqwest = { version = "0.12.24", default-features = false }
# Additional dependencies used by root-level tests
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
fastrand = "2.3.0"
filetime = "0.2.26"
futures-util = "0.3.31"
html-escape = "0.2.13"
libc = "0.2.177"
rayon = "1.11.0"
tracing = "0.1.41"

[features]
default = [] # Empty default features - must be explicitly enabled

# Test and development features (off by default)
bench = []
examples = [] # Feature gate for examples
# Forward features to the dev-dependency bitnet-tests
integration-tests = ["bitnet-tests/fixtures", "bitnet-tests/reporting", "bitnet-tests/trend", "bitnet-tests/integration-tests"]
spm = []                                                                                                                        # for sentencepiece tokenizer tests

# Core inference features
cpu = ["kernels", "inference", "tokenizers", "bitnet-kernels/cpu-optimized", "bitnet-inference/cpu", "bitnet-quantization/cpu"]
cuda = ["gpu"]                                                                                       # Alias for backward compatibility
gpu = ["kernels", "inference", "tokenizers", "bitnet-kernels/gpu", "bitnet-inference/gpu", "bitnet-quantization/gpu"]

# Component features
inference = ["dep:bitnet-inference", "kernels"]
kernels = ["dep:bitnet-kernels"]
tokenizers = ["dep:bitnet-tokenizers"]

# SIMD optimizations
avx2 = ["bitnet-kernels/avx2"]
avx512 = ["bitnet-kernels/avx512"]
neon = ["bitnet-kernels/neon"]

# Language bindings (not included in main crate)
ffi = []    # Handled by bitnet-ffi crate
python = [] # Handled by bitnet-py crate
wasm = []   # Handled by bitnet-wasm crate

# Server and CLI (not included in main crate)
cli = []    # Handled by bitnet-cli crate
server = [] # Handled by bitnet-server crate
full-cli = [] # Full CLI with all subcommands (forwarded to bitnet-cli)

# Quantization features
iq2s-ffi = ["bitnet-models/iq2s-ffi", "dep:bitnet_ggml_ffi"] # Enable IQ2_S quantization via GGML FFI

# Cross-validation features
cpp-ffi = []  # Link tests against BitNet.cpp library
crossval = [] # Enable cross-validation against C++ implementation

# Test framework features (forward to bitnet-tests)
ffi-tests = []
fixtures = ["bitnet-tests/fixtures"]
full-framework = ["fixtures", "reporting", "trend", "spm", "integration-tests", "ffi-tests"]
reporting = ["bitnet-tests/reporting"]
trend = ["bitnet-tests/trend"]

# Convenience features
full = ["cpu", "cuda", "avx2", "avx512", "neon"]
minimal = []                                     # Only core crates, no inference

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_inference"
required-features = ["cpu", "examples"]

# [[example]]
# name = "gpu_inference"
# required-features = ["gpu", "examples"]
# NOTE: Temporarily disabled - needs API updates

# [[example]]
# name = "streaming_generation"
# required-features = ["cpu", "examples"]
# NOTE: Temporarily disabled - needs API updates

[[example]]
name = "simple_demo"

[[example]]
name = "ffi_threading_demo"
required-features = ["cpu", "ffi"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.100"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Async runtime
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

# Performance and SIMD
bytemuck = { version = "1.24.0", features = ["derive"] }
rayon = "1.11.0"

# Tensor operations
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }

# Serialization formats
memmap2 = "0.9.8"
safetensors = "0.6.2"

# CLI and configuration
clap = { version = "4.5.49", features = ["derive", "env"] }
clap_complete = "4.5.59"
console = "0.16.1"
crossterm = "0.29.0"
dirs = "6.0.0"
humansize = "2.1.3"
humantime = "2.3.0"
indicatif = "0.18.0"
num_cpus = "1.17.0"
sysinfo = "0.37.2"

# Web server
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Monitoring and observability
chrono = { version = "0.4.42", features = ["serde"] }
metrics = "0.24.2"
metrics-prometheus = "0.11.0"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "rt-tokio"] }
prometheus = "0.14.0"
tonic = "0.14.2"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
uuid = { version = "1.18.1", features = ["v4"] }

# FFI and bindings
js-sys = "0.3.81"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"

# GPU support
cudarc = "0.17.3"

# Testing and benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.8.0"
tempfile = "3.23.0"
serial_test = "3.2.0"
temp-env = "0.3.6"

# HTTP client for examples
reqwest = { version = "0.12.24", features = ["json"] }

# Code quality
bindgen = "0.72.1"
cc = "1.2.41"

# Build-time information
vergen = { version = "9.0.6", features = ["build", "rustc", "cargo"] }

[profile.release]
codegen-units = 1 # Single codegen unit for best optimization
lto = "thin"      # Faster than "fat", still good optimization
opt-level = 3     # Maximum optimization (default)
panic = "abort"   # Smaller binaries, no unwinding
strip = "symbols" # Strip symbols but keep debuginfo
# overflow-checks = false # Already false in release

[profile.bench]
debug = true

# Speed up dev builds for dependencies
[profile.dev.package."*"]
opt-level = 2

# Workspace-level lints for code quality
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
ptr_arg = "deny"

# Workspace-level feature flags for convenience
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
pre-release-replacements = [{ file = "README.md", search = "bitnet = \"[a-z0-9\\.-]+\"", replace = "bitnet = \"{{version}}\"" }, { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}" }]
sign-commit = true
sign-tag = true


# Workspace metadata for crates.io publication
# Only build the perf benchmarks when the "bench" feature is explicitly enabled
# [[test]]
# name = "performance_benchmarks"
# path = "tests/performance_benchmarks.rs"
# required-features = ["bench"]
# NOTE: Temporarily disabled - needs API updates

[workspace.metadata.bitnet]
categories = [
  "science",      # Scientific computing
  "algorithms",   # Algorithm implementations
  "mathematics",  # Mathematical operations
  "wasm",         # WebAssembly support
  "api-bindings", # Language bindings
]
keywords = [
  "machine-learning", # ML/AI domain
  "llm",              # Large Language Models
  "quantization",     # Model quantization
  "inference",        # Model inference
  "bitnet",           # BitNet specific
]
msrv = "1.89.0"
