[workspace]
members = [
  ".",                          # Main library crate
  "crates/bitnet-common",
  "crates/bitnet-math",
  "crates/bitnet-warn-once",
  "crates/bitnet-runtime-context",
  "crates/bitnet-runtime-context-core",
  "crates/bitnet-bdd-grid",
  "crates/bitnet-bdd-grid-core",
  "crates/bitnet-compat",
  "crates/bitnet-ggml-ffi",     # GGML FFI for IQ2_S support
  "crates/bitnet-runtime-feature-flags",
  "crates/bitnet-runtime-feature-flags-core",
  "crates/bitnet-models",
  "crates/bitnet-quantization",
  "crates/bitnet-kernels",
  "crates/bitnet-inference",
  "crates/bitnet-rope",
  "crates/bitnet-tokenizers",
  "crates/bitnet-prompt-templates",
  "crates/bitnet-honest-compute",
  "crates/bitnet-receipts",
  "crates/bitnet-sampling",
      "crates/bitnet-transformer",  # Extracted from bitnet-models; depends on bitnet-quantization
  "crates/bitnet-device-probe",  # SRP: device detection / capability probing
  "crates/bitnet-logits",        # SRP: pure logits transform functions
  "crates/bitnet-generation",    # SRP: decode-loop stopping logic & generation events
  "crates/bitnet-engine-core",   # SRP: orchestration contracts (traits, session types)
  "crates/bitnet-gguf",          # SRP: lightweight GGUF file format types & header parser
  "crates/bitnet-feature-matrix",
  "crates/bitnet-server",
  "crates/bitnet-cli",
  "crates/bitnet-st2gguf",      # SafeTensors to GGUF converter
  "crates/bitnet-st-tools",     # SafeTensors inspection & merge utilities
  "crates/bitnet-trace",        # Tensor activation tracing for cross-validation
  "crates/bitnet-ffi",
  "crates/bitnet-py",
  "crates/bitnet-runtime-bootstrap",
  "crates/bitnet-startup-contract",
  "crates/bitnet-wasm",
  "crates/bitnet-sys",
  "crates/bitnet-feature-contract",
  "crates/bitnet-runtime-profile",
  "crates/bitnet-runtime-profile-core",
  "crates/bitnet-runtime-profile-contract",
  "crates/bitnet-runtime-profile-contract-core",
  "crates/bitnet-testing-profile",
  "crates/bitnet-testing-scenarios",
  "crates/bitnet-testing-policy-core",
  "crates/bitnet-testing-scenarios-core",
  "crates/bitnet-testing-scenarios-profile-core",
  "crates/bitnet-testing-policy", 
  "crates/bitnet-testing-policy-tests", 
  "crates/bitnet-testing-policy-kit",
  "crates/bitnet-testing-policy-contract",
  "crates/bitnet-testing-policy-interop",
  "crates/bitnet-testing-policy-runtime",
  "crates/bitnet-startup-contract-core",
  "crates/bitnet-startup-contract-diagnostics",
  "crates/bitnet-startup-contract-guard",
  "crates/bitnet-test-support",
  "crates/bitnet-validation",    # SRP: LayerNorm/projection validation rules (shared)
  "crates/bitnet-gpu-hal",       # GPU hardware abstraction layer
  "crates/bitnet-opencl",        # OpenCL backend for Intel Arc GPU inference
  "crates/bitnet-metal",         # MSL compute kernels for Apple Silicon
    "crates/bitnet-rocm",          # HIP compute kernels for AMD ROCm backend",
  "crates/bitnet-opencl",        # OpenCL GPU device capability query & selection
  "crossval",
  "tests",
  "tests-new",
  "xtask",
  "xtask-build-helper",
  "fuzz",
  "tools/migrate-gen-config",   # AST migration tool for GenerationConfig
  "crates/bitnet-opencl",       # OpenCL GPU backend with KV cache & paged attention
]
resolver = "2"
# Build & test these by default. Others (root `bitnet`, `tests`, `xtask`,
# wasm/py/ffi, etc.) remain workspace members but are opt-in.
default-members = [
  "crates/bitnet-common",
  "crates/bitnet-math",
  "crates/bitnet-warn-once",
  "crates/bitnet-quantization",
  "crates/bitnet-rope",
  "crates/bitnet-transformer",
  "crates/bitnet-test-support",
  "crates/bitnet-models",
  "crates/bitnet-tokenizers",
  "crates/bitnet-kernels",
  "crates/bitnet-inference",
  "crates/bitnet-prompt-templates",
  "crates/bitnet-receipts",
  "crates/bitnet-sampling",
  "crates/bitnet-cli",
  "crates/bitnet-server",
  "crates/bitnet-st2gguf",
  # Testing infrastructure crates (always built/tested by default)
  "crates/bitnet-bdd-grid",
  "crates/bitnet-bdd-grid-core",
  "crates/bitnet-feature-contract",
  "crates/bitnet-feature-matrix",
  "crates/bitnet-testing-policy-core",
  "crates/bitnet-testing-scenarios-core",
  "crates/bitnet-runtime-profile-core",
  # SRP microcrate extractions (phase-6)
  "crates/bitnet-device-probe",
  "crates/bitnet-logits",
  "crates/bitnet-generation",
  "crates/bitnet-engine-core",
  "crates/bitnet-gguf",
  "crates/bitnet-validation",    # SRP: LayerNorm/projection validation rules (shared)
]

[package]
authors = ["BitNet Contributors <bitnet@EffortlessMetrics.com>"]
categories = ["science", "algorithms", "mathematics", "wasm", "api-bindings"]
description = "High-performance Rust implementation of BitNet 1-bit LLM inference with cross-platform support"
documentation = "https://docs.rs/bitnet"
edition = "2024"
homepage = "https://github.com/EffortlessMetrics/BitNet"
keywords = ["machine-learning", "llm", "quantization", "inference", "bitnet"]
license = "MIT OR Apache-2.0"
name = "bitnet"
readme = "README.md"
repository = "https://github.com/EffortlessMetrics/BitNet"
rust-version.workspace = true
version = "0.2.1-dev"
# Disable automatic discovery of tests, benches, and examples
# Many of these use outdated APIs and need updating
# Note: The tests/ directory is a separate bitnet-tests workspace crate
autoexamples = false
autotests = false
autobenches = false

[lib]
# Library source


[workspace.package]
authors = ["BitNet Contributors <bitnet@EffortlessMetrics.com>"]
categories = ["science", "algorithms", "mathematics", "wasm", "api-bindings"]
description = "High-performance Rust implementation of BitNet 1-bit LLM inference with cross-platform support"
documentation = "https://docs.rs/bitnet"
edition = "2024"
homepage = "https://github.com/EffortlessMetrics/BitNet"
keywords = ["machine-learning", "llm", "quantization", "inference", "bitnet"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EffortlessMetrics/BitNet"
rust-version = "1.92.0"
version = "0.2.1-dev"

[dependencies]
# Core crates - always included
bitnet-common = { path = "crates/bitnet-common", version = "0.2.1-dev" }
bitnet-math = { path = "crates/bitnet-math", version = "0.2.1-dev" }
bitnet-warn-once = { path = "crates/bitnet-warn-once", version = "0.2.1-dev" }
bitnet-models = { path = "crates/bitnet-models", version = "0.2.1-dev" }
bitnet-quantization = { path = "crates/bitnet-quantization", version = "0.2.1-dev", default-features = false }
bitnet_ggml_ffi = { package = "bitnet-ggml-ffi", path = "crates/bitnet-ggml-ffi", version = "0.2.1-dev", optional = true }

# Optional crates based on features
bitnet-inference = { path = "crates/bitnet-inference", version = "0.2.1-dev", optional = true }
bitnet-kernels = { path = "crates/bitnet-kernels", version = "0.2.1-dev", optional = true }
bitnet-tokenizers = { path = "crates/bitnet-tokenizers", version = "0.2.1-dev", optional = true }
bitnet-device-probe = { path = "crates/bitnet-device-probe", version = "0.2.1-dev", optional = true }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "rustc", "cargo"] }

# Features section moved to line 126

[dev-dependencies]
async-trait = "0.1.89"
bitnet-logits = { path = "crates/bitnet-logits", version = "0.2.1-dev" }
bitnet-rope = { path = "crates/bitnet-rope", version = "0.2.1-dev" }
bitnet-transformer = { path = "crates/bitnet-transformer", version = "0.2.1-dev" }
bitnet-tests = { path = "tests", version = "0.2.1-dev", package = "bitnet-tests", default-features = false }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
criterion = "0.7.0"
ctor = "0.6.1"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
toml = "0.9.8"
# API snapshot testing
insta = { version = "1.43.2", features = ["yaml", "json"] }
num_cpus = "1.17.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
# For test error handling construction
reqwest = { version = "0.12.24", default-features = false }
# Additional dependencies used by root-level tests
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
fastrand = "2.3.0"
filetime = "0.2.26"
futures-util = "0.3.31"
html-escape = "0.2.13"
libc = "0.2.177"
rayon = "1.11.0"
tracing = "0.1.41"

[features]
default = [] # Empty default features - must be explicitly enabled

# Test and development features (off by default)
bench = []
examples = [] # Feature gate for examples
# Forward features to the dev-dependency bitnet-tests
integration-tests = ["bitnet-tests/fixtures", "bitnet-tests/reporting", "bitnet-tests/trend", "bitnet-tests/integration-tests"]
spm = []                                                                                                                        # for sentencepiece tokenizer tests

# Core inference features
cpu = ["kernels", "inference", "tokenizers", "bitnet-kernels/cpu-optimized", "bitnet-inference/cpu", "bitnet-quantization/cpu"]
cuda = ["gpu"]                                                                                       # Alias for backward compatibility
gpu = ["kernels", "inference", "tokenizers", "bitnet-kernels/gpu", "bitnet-inference/gpu", "bitnet-quantization/gpu"]
rocm = ["kernels", "inference", "tokenizers", "bitnet-kernels/rocm", "bitnet-inference/rocm", "bitnet-quantization/rocm"]
vulkan = ["kernels", "inference", "tokenizers", "bitnet-kernels/vulkan", "bitnet-inference/gpu", "bitnet-quantization/gpu"]
metal = ["kernels", "inference", "tokenizers", "bitnet-common/metal", "bitnet-inference/metal"]
opencl = ["kernels", "inference", "tokenizers", "bitnet-kernels/opencl", "bitnet-inference/opencl", "bitnet-quantization/opencl"]
npu = ["dep:bitnet-device-probe", "bitnet-device-probe/npu"]

# Component features
inference = ["dep:bitnet-inference", "kernels"]
kernels = ["dep:bitnet-kernels"]
tokenizers = ["dep:bitnet-tokenizers"]

# SIMD optimizations
avx2 = ["bitnet-kernels/avx2"]
avx512 = ["bitnet-kernels/avx512"]
neon = ["bitnet-kernels/neon"]

# Language bindings (not included in main crate)
ffi = []    # Handled by bitnet-ffi crate
python = [] # Handled by bitnet-py crate
wasm = []   # Handled by bitnet-wasm crate

# Server and CLI (not included in main crate)
cli = []    # Handled by bitnet-cli crate
server = [] # Handled by bitnet-server crate
full-cli = [] # Full CLI with all subcommands (forwarded to bitnet-cli)

# Quantization features
iq2s-ffi = ["bitnet-models/iq2s-ffi", "dep:bitnet_ggml_ffi"] # Enable IQ2_S quantization via GGML FFI

# Cross-validation features
cpp-ffi = []  # Link tests against BitNet.cpp library
crossval = [] # Enable cross-validation against C++ implementation
trace = ["bitnet-models/trace"] # Enable tensor activation tracing

# Test framework features (forward to bitnet-tests)
ffi-tests = []
fixtures = ["bitnet-tests/fixtures"]
full-framework = ["fixtures", "reporting", "trend", "spm", "integration-tests", "ffi-tests"]
reporting = ["bitnet-tests/reporting"]
trend = ["bitnet-tests/trend"]

# Convenience features
full = ["cpu", "cuda", "metal", "avx2", "avx512", "neon"]
minimal = []                                     # Only core crates, no inference

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs", "-Zunstable-options", "--generate-link-to-compiler-builtins"]
targets = ["x86_64-unknown-linux-gnu"]

[[example]]
name = "basic_inference"
required-features = ["cpu", "examples"]

# [[example]]
# name = "gpu_inference"
# required-features = ["gpu", "examples"]
# NOTE: Temporarily disabled - needs API updates

# [[example]]
# name = "streaming_generation"
# required-features = ["cpu", "examples"]
# NOTE: Temporarily disabled - needs API updates

[[bench]]
name = "srp_ops"
harness = false
required-features = ["cpu"]
